--- a/project/web_page/css/style.css
+++ b/project/web_page/css/style.css
@@ -1,10 +1,13 @@
 #map {
-  width: 100%;
-  height: 400px;
+  width: 600px;
+  height: 400px
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
-  height: 50%;
-  margin: 0;
+  margin: 0, auto;
   padding: 0
+}
+#slider{
+  width: 500px;
+  height: 5%
 }
