--- a/project/web_page/css/style.css
+++ b/project/web_page/css/style.css
@@ -1,13 +1,46 @@
 #map {
-  width: 600px;
-  height: 400px
+  width: 800px;
+  height: 400px;
+  margin: auto;
+  margin-top: 100px;
+  margin-top: 100px;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
   margin: 0, auto;
-  padding: 0
+  padding: 0;
+  background: #D0D0C0;
 }
 #slider{
   width: 500px;
   height: 5%
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
 }
