--- a/project/web_page/css/style.css
+++ b/project/web_page/css/style.css
@@ -1,5 +1,6 @@
 #map {
-  width: 800px;
+  min-width: 500px;
+  width: 70%;
   height: 400px;
   margin: auto;
   margin-top: 100px;
@@ -12,35 +13,28 @@ html, body {
   background: #D0D0C0;
 }
 #slider{
-  width: 500px;
+  /*width: 500px;*/
+  width: 10%;
   height: 5%
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-
+.navigationBar {
+  width: 100%;
+  overflow: hidden;
+  background: #111;
 }
 
-li {
-    float: left;
+.navigationBar a{
+float: left;
+display: block;
+color: #F2F2F2;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
 }
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover:not(.active) {
-    background-color: #111;
-}
-
-.active {
-    background-color: #4CAF50;
+.navigationBar a:hover{
+background-color: #DDDDDD;
+color: black;
 }
