--- a/project/css/style.css
+++ b/project/css/style.css
@@ -38,3 +38,22 @@ font-size: 17px;
 background-color: #DDDDDD;
 color: black;
 }
+
+.bar{
+  fill: steelblue;
+}
+
+.bar:hover{
+  fill: brown;
+}
+
+.axis {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
