--- a/project/css/style.css
+++ b/project/css/style.css
@@ -6,6 +6,12 @@
   margin-top: 100px;
   margin-top: 100px;
 }
+
+svg{
+  display: block;
+  margin: auto;
+}
+
 /* Optional: Makes the sample page fill the window. */
 html, body {
   margin: 0, auto;
